# SpiffWorkflow

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
SpiffWorkflow/: task.py
SpiffWorkflow/specs/: base.py
doc/custom-tasks/: serializer.py  start.py  strike.py
doc/tutorial/: deserialize-wf.py  deserialize.py  nuclear.py  serialize-wf.py  serialize.py  start.py
tests/SpiffWorkflow/: PatternTest.py  PersistSmallWorkflowTest.py  TaskTest.py  WorkflowTest.py  util.py
tests/SpiffWorkflow/bpmn/: ActionManagementTest.py  ApprovalsTest.py  BpmnLoaderForTests.py  BpmnWorkflowTestCase.py  InvalidWorkflowsTest.py  MessageInterruptsSpTest.py  MessageInterruptsTest.py  MessageNonInterruptTest.py  MessageNonInterruptsSpTest.py  MessagesTest.py  NestedProcessesTest.py  PackagerForTests.py  ParallelTest.py  Signavio2Html.py  TimerIntermediateTest.py
tests/SpiffWorkflow/data/spiff/: workflow1.py
tests/SpiffWorkflow/serializer/: baseTest.py  dictTest.py  jsonTest.py  prettyxmlTest.py
tests/SpiffWorkflow/specs/: CeleryTest.py  ExecuteTest.py  JoinTest.py  MergeTest.py  SubWorkflowTest.py  TaskSpecTest.py  TransformTest.py  WorkflowSpecTest.py
